--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,7 @@
 * {
     margin: 0;
     padding: 0;
+    box-sizing: border-box;
 }
 
 body {
@@ -11,12 +12,6 @@ body {
     width: 100%;
     height: 70px;
     background-color: #101028
-}
-
-#Header img {
-    margin-left: 50px;
-    height: 50px;
-    padding: 5px;
 }
 
 hr {
@@ -31,29 +26,6 @@ hr {
     margin-left: 60px;
 }
 
-#Content {
-    height: auto;
-    width: 100%;
-    float: left;
-    display: flex;
-    background-color: rgb(255, 253, 253);
-}
-
-#Content>div {
-    flex: 1;
-}
-
-#Details {
-    padding: 20px;
-    height: 20px;
-    background-color: rgb(255, 253, 253);
-    left: 305px;
-    padding-left: 320px;
-    text-align: center;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif'
-
-}
-
 #HeaderInside ul {
     list-style-type: none;
 }
@@ -65,7 +37,6 @@ hr {
 #HeaderInside ul li a {
     display: block;
     height: 25px;
-    /* background: #060613; */
     width: 90px;
     font-size: 1.0em;
     font-weight: bold;
@@ -85,16 +56,6 @@ nav {
     padding-top: 20px;
     overflow-y: scroll;
     height: auto;
-}
-
-#tittle {
-    width: auto;
-    height: 70px;
-    margin-left: 0;
-    margin-top: 100px;
-    float: left;
-    padding: 15px;
-    color: #101028;
 }
 
 nav h3 {
