--- a/css/style.css
+++ b/css/style.css
@@ -17,7 +17,7 @@ a.h6:active{
 }
 
 .text-muted{
-    font-size:14px;
+    font-size:150%;
 }
 
 .h6{
@@ -30,13 +30,9 @@ a.h6:active{
 }
 
 .btn {
-    font-size: 14px;
+    font-size: 150%;
 }
 
 .nav-link{
-    font-size: 13px;
-}
-
-.config{
-	font-size:15px;
+    font-size: 140%;
 }
