New updates, most bugs fixed and much work yet to be done

--- a/css/style.css
+++ b/css/style.css
@@ -32,3 +32,20 @@ a.h6:active{
     padding-bottom: 7%;
     border-style: none;
 }
+
+
+
+
+
+
+
+/* nav {
+
+    width: 100%;
+} */
+
+/* nav.breadcrumb */
+
+nav.btnInfo{
+    padding-left: 13%;
+}
