--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,3 @@
-div#menuBar.container-fluid
-{
-    width: 71%; 
-    margin-left: 11%;
-}
-
 a.text-muted:link, 
 a.text-muted:visited,
 a.text-muted:hover, 
@@ -18,19 +12,20 @@ a.h6:visited,
 a.h6:hover, 
 a.h6:active
 {
-    font-size: 83%;
+    font-size: 91%;
     text-align: center;
     text-decoration: none;
 }
 
+ol div.btnInfo,
 .text-muted
 {
-    font-size: 87%;
+    font-size: 97%;
 }
 
 .h6
 {
-    font-size: 67%;
+    font-size: 83%;
 }
 
 .card .card-header
@@ -39,18 +34,11 @@ a.h6:active
     border-style: none;
 }
 
-/* nav 
+ol.breadcrumb
 {
-
-    width: 100%;
-} */
-
-/* nav.breadcrumb */
-
-/* .btnInfo
-{
-    padding-left: 13%;
-} */
+    padding-left: 2%;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
 
 header
 {
@@ -62,10 +50,12 @@ header
     font-family: vernada;
 }
 
-div#menuBar.container-fluid
+
+div#menuBar.container
 {
-    margin-top: -5%;
-    padding-left: 7%;
+    margin-top: -10%;
+    padding-left: 10%;
+    width: 100%;
 }
 
 div.container-fluid
@@ -73,21 +63,30 @@ div.container-fluid
     padding: 1%;
 }
 
+/* nav button */
+button.navbar-toggler
+{
+    margin-top: -7%;    
+    margin-left: -3%;
+}
+
+/* navbar after expanded through nav button */
+div#navbarTogglerDemo01.p-2.navbar-collapse.collapse.show
+{
+    margin-left: -5%;
+    margin-top: 10%;
+    width: 100%; 
+}
+
 div#content.infoDisplay
 {
-    margin-top: -4%;
-    padding: 1%;
-    text-align: justify;
+    margin-top: -5%;
+    padding: 2%;
 }
 
 h6.display-4
 {
-    padding-left: 12%;
-}
-
-a
-{
-    color: black;
+    margin-left: 9%;
 }
 
 hr
@@ -99,21 +98,26 @@ iframe
 {
     height: 480px;
     width: 103%;
-    border:none;
+    border: none;
+    margin-top: -2.5%;
 }
 
-/* div#topNav div header img#img
+/* nav image styling
+div#topNav div header img#img
 {
     height:"5px"; 
     width:"5px"; 
+}*/
+
+/* image styling for content */
+div.col-sm-3 img,
+div.col-sm-4 img
+{
+    width: 93%;
+    height: 97%;
 }
 
-div img
-{
-    width:93%;
-     height:97%;
-} */
-
+/* content base margin from another where required*/
 div#add.branch,
 div#access.branch,
 div#registration.access,
@@ -124,16 +128,22 @@ div#barcode.inventory,
 div#nobarcode.inventory,
 div#search.inventory,
 div#shelve.inventory
+div#add.store,
+div#manage.store
 {
     margin-bottom: 5%
 }
 
 footer
 {
-    margin-top: 3%;
+    margin-top: 1%;
     background-color: #F3F3F3;
-    text-align:center; 
+    text-align: center; 
     font-size: 80%; 
     color: black;
 }
- 
+
+a
+{
+    color: black;
+}
