--- a/css/style.css
+++ b/css/style.css
@@ -45,7 +45,7 @@ header
     padding: 0.5%; 
     padding-left: 1.5%; 
     background-color:rgb(48, 114, 48); 
-    font-size: 123%; 
+    font-size: 143%; 
     color: white; 
     font-family: vernada;
 }
@@ -124,14 +124,17 @@ div#registration.access,
 div#step1.access,
 div#step2.access,
 div#step3.access,
+div#step4.access,
 div#barcode.inventory,
 div#nobarcode.inventory,
 div#search.inventory,
-div#shelve.inventory
+div#shelve.inventory,
 div#add.store,
-div#manage.store
+div#manage.store,
+div#sale.home,
+div#add.users
 {
-    margin-bottom: 5%
+    margin-bottom: 10%
 }
 
 footer
@@ -140,6 +143,7 @@ footer
     background-color: #F3F3F3;
     text-align: center; 
     font-size: 80%; 
+    line-height: 1.25;
     color: black;
 }
 
